--- a/React-Hooks/Github-Finder-with-hooks/src/styles/bootstrap_override.scss
+++ b/React-Hooks/Github-Finder-with-hooks/src/styles/bootstrap_override.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap');
 $bg-purple: rgba(138, 44, 226, 0.502);
+$bg-purple-op: rgba(138, 44, 226, 0.2);
 
 * {
     font-family: 'Edu VIC WA NT Beginner', cursive;
@@ -57,4 +58,19 @@ small {
 .active {
     font-weight: bold;
     color:red;
+}
+
+.btn {
+    border: 1px solid #343434;
+}
+
+.btn:hover {
+    background-color: $bg-purple-op;
+    color: #fafafa;
+}
+
+.btn:focus {
+    border-color: $bg-purple;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(138, 44, 226, 0.502);
+    outline: 0 none;
 }
